backend/manifests/estimate-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estimate-app
  namespace: estimate360
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estimate-app
  template:
    metadata:
      labels:
        app: estimate-app
    spec:
      containers:
        - name: estimate-app
          image: payk96/estimate:0.0.8
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: estimate-app-service
  namespace: estimate360
spec:
  selector:
    app: estimate-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
