backend/manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estimate-frontend
  namespace: estimate360
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estimate-frontend
  template:
    metadata:
      labels:
        app: estimate-frontend
    spec:
      containers:
        - name: estimate-frontend
          image: orgylei/estimate-frontend:0.0.1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: estimate-frontend-service
  namespace: estimate360
spec:
  selector:
    app: estimate-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
